# ppt-generate

./: .gitignore  README.md  README_DYNAMIC_MCP.md  README_ENHANCED.md  output.html  package-lock.json  pyproject.toml  test.py  test_run_server.py
a2a/test/: main.py  server.py
app/: Dockerfile  README.md  config.py  index.html  main.py  requirements.txt  run.py  script.js  server.py  styles.css  test_api.py
app/api/: websocket.py
app/backend/: main.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts
app/frontend/src/: App.tsx  styles.css
app/models/: schemas.py
app/services/: document_service.py  ppt_service.py
docs/: dynamic_registration_quickstart.md  multi_server_mcp_guide.md
examples/: discovered_servers.json  discovery_server.py  dynamic_registration_example.py  servers_config.json
src/: mcp_tools.py
src/ppt_generate/: README_MCP_DYNAMIC.md  config_mcp_client.py  discovered_servers.json  dynamic_mcp_client.py  mcp_client.py  mcp_client_backup.py  mcp_dynamic_client.py  mcp_dynamic_config.json  mcp_dynamic_example.py
src/ppt_generate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ppt_generate/agents/: mcp_client.py  ppt_agent.py
test/: html转富文本工具.html  富文本到底是什么.html  富文本提取工具.html
test/a2a/: client.py  coding_agent.py  run_client.py  run_server.py
test/mcp/: test_run_client.py  test_run_server.py
test/ppt_test/: IMPROVEMENTS.md  complex-demo.html  complex-template.css  convert_to_pdf.py  final-advanced-output.pptx  final-complex-output.pptx  final-simple-output.pptx  html2pptx.py  layout_analyzer.py  ppt-demo.html  ppt-template.css  presentation.pptx  prompt.py  run_tests.py
(+12 files in other folders)
