[project]
name = "ppt-generate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "sympy>=1.14.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
