[project]
name = "ppt_generate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.16",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
    "fastapi>=0.115.5",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.13.4",
    "cssutils>=2.11.1",
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "openai>=1.93.3",
    "pdfkit>=1.0.0",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "sympy>=1.14.0",
    "weasyprint>=65.1",
    "websockets>=15.0.1",
    "xhtml2pdf>=0.2.17",
]

